grammar.txt
This isn't a super strict grammar with like BNF or anything, just a nice reference for the future when changing the parser.

* means 0 or more times
+ means 1 or more times
| means or
? means optional

program = (procedure)* EOF

procedure = 'proc' identifer '(' params ')' '=>' '(' returns ')' block
params = identifier ':' identifier (',' identifier ':' identifier)*
returns = identifier (',' identifier)*

statement = (expr       |
             decl       |
             assignment |
             if         |
             while      |
             block      |
             return)   ';'


expr = ( '(' expr ')' | number | identifier ) (operator expr)*
decl = identifer : (type)? = (expr | braced_initializer)
braced_initializer = '{' (number ',')* '}' 
assignment = identifier '=' expr
if = if expr block (elif expr block)* ( 'else' block )?
while = while expr block
block = '{' (statement)* '}'
return = 'return' expr

identifier = (_|a-z|A-Z) (a-z|A-Z|0-9|_)*
